--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,11 @@ main {
   grid-template-columns: 1fr;
   gap: 3rem;
 }
+
 .project ul {
+  line-height: 1.5;
+}
+.project .technologies {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -207,7 +211,7 @@ main {
   justify-content: center;
   gap: 1rem;
 }
-.project li {
+.project .technologies li {
   background-color: var(--marina);
   color: var(--white);
   padding: 0.5rem;
@@ -309,7 +313,7 @@ footer {
   .project img {
     grid-row: auto;
   }
-  .project ul {
+  .project .technologies {
     justify-content: flex-start;
   }
 }
